--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-*{
-    font-family: sans-serif;
+html, body{
+    width: 100%;
+    max-width: 100vw;
+    height: 100%;
 }
 
 body{
-    background-color: rgb(194, 192, 192);
+    background-color: rgb(187, 187, 252);
 }
